--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,15 +57,15 @@
   }
 
   h2 {
-    @apply text-3xl md:text-4xl mb-4;
+    @apply text-3xl md:text-4xl mt-12 mb-4;
   }
 
   h3 {
-    @apply text-2xl md:text-3xl mb-3;
+    @apply text-2xl md:text-3xl mt-10 mb-3;
   }
 
   p {
-    @apply mb-4 leading-relaxed;
+    @apply mb-4 leading-loose;
   }
 
   /* Smooth scrolling */
